# git-commit-extractor

./: .gitignore  README.md  _config.toml  config.toml  main.py  pyproject.toml
src/: commit_extractor.py  commit_info.py  constants.py
